use il to impl SetObjectAtOffset/GetObjectAtOffset

--- a/UnsafeSerialization/UnsafeSerialization.csproj
+++ b/UnsafeSerialization/UnsafeSerialization.csproj
@@ -53,4 +53,9 @@
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>set writeSymbol=false
+if "$(ConfigurationName)" == "Debug" (set writeSymbol=true)
+$(SolutionDir)\UnsafeSerializationPostProcessor\bin\$(ConfigurationName)\UnsafeSerializationPostProcessor.exe $(TargetPath) %25writeSymbol%25</PostBuildEvent>
+  </PropertyGroup>
 </Project>
