--- a/Tests2/Tests2.csproj
+++ b/Tests2/Tests2.csproj
@@ -44,6 +44,7 @@
     </CustomCommands>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
+    <IntermediateOutputPath>C:\Users\ying\AppData\Local\Temp\vs2729.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -61,6 +62,7 @@
       </CustomCommands>
     </CustomCommands>
     <PlatformTarget>x64</PlatformTarget>
+    <IntermediateOutputPath>C:\Users\ying\AppData\Local\Temp\vs2729.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
