--- a/Tests2/Tests2.csproj
+++ b/Tests2/Tests2.csproj
@@ -102,7 +102,9 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>set writeSymbol=false
+
 if "$(ConfigurationName)" == "Debug" (set writeSymbol=true)
-$(SolutionDir)\UnsafeSerializationPostProcessor\bin\$(ConfigurationName)\UnsafeSerializationPostProcessor.exe $(TargetPath) %25writeSymbol%25</PostBuildEvent>
+
+$(ProjectDir)\..\UnsafeSerializationPostProcessor\bin\$(ConfigurationName)\UnsafeSerializationPostProcessor.exe $(TargetPath) %25writeSymbol%25</PostBuildEvent>
   </PropertyGroup>
 </Project>
