--- a/UnsafeSerialization/UnsafeSerialization.mac.csproj
+++ b/UnsafeSerialization/UnsafeSerialization.mac.csproj
@@ -40,6 +40,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <CustomCommands>
+      <CustomCommands>
+        <Command>
+          <type>AfterBuild</type>
+          <command>mono ${ProjectDir}/../UnsafeSerializationPostProcessor/bin/${ProjectConfigName}/UnsafeSerializationPostProcessor.exe ${TargetPath} false</command>
+        </Command>
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
